quantities-macros/tests/ui/missing_unit.rs
use quantities_macros::quantity;

#[quantity()]
pub struct RandomQuantity;

fn main() {}